# onnx-rusty-inference-engine

./: .gitignore  Cargo.toml  README.md  pyproject.toml  squeezenet_data_0.pb  squeezenet_output_0.pb
src/: convolution_op.rs  dropout_op.rs  global_average_pool_op.rs  lib.rs  main.rs  max_pool_op.rs  model_inference.rs  onnx_structure.rs  read_onnx.rs  read_proto.rs  relu_op.rs  write_onnx.rs
src/inference_engine/: mod.rs  model_inference.rs  utils.rs
src/inference_engine/multithreading/: mod.rs  multithreading.rs  utils.rs
src/inference_fp32_ops/: add_op.rs  concatenate_op.rs  convolution_op.rs  dropout_op.rs  global_average_pool_op.rs  max_pool_op.rs  mod.rs  mul_op.rs  relu_op.rs  reshape_op.rs  softmax.rs  softmax_op.rs
src/onnx_parser/: onnx_structure.rs  read_onnx.rs
src/protobuf_parser/: parse_proto.rs  proto_structure.rs
src/read_proto/: proto_structure.rs
