[package]
name = "onnx-rusty-inference-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Group17"
crate-type = ["cdylib"]

[dependencies]
protobuf = "3.2.0"
ndarray = "0.15.3"
num-traits = "0.2"
ndarray-npy = "0.8.1"
rand = {version="0.8.5", features = [ "small_rng" ]}
pyo3 = "0.19.0"