[package]
name = "onnx-rusty-inference-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "onnx_rusty_inference_engine"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "onnx_rusty_inference_engine_bin"
path = "src/main.rs"

[dependencies]
protobuf = "=3.4.0"
ndarray = "0.15.3"
num-traits = "0.2"
ndarray-npy = "0.8.1"
rand = {version="0.8.5", features = [ "small_rng" ]}
pyo3 = "0.19.0"
onnx-protobuf = "0.2.3"
